# Rusty-MetalFistBot-7000

./: Cargo.toml  README.md
src/: main.rs
src/commands/: bass_boost.rs  dick_size.rs  leave.rs  mod.rs  neko.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  rand_quote.rs  resume.rs  roast.rs  serverinfo.rs  skip.rs
src/discord_voice_api/: mod.rs
src/discord_voice_api/gateway/: client.rs  mod.rs
src/discord_voice_api/udp/: handshake.rs  mod.rs  send_packet.rs  setup.rs
src/discord_voice_api/voice/: audio_commands.rs  connection.rs  consumer.rs  crypto.rs  ffmpeg.rs  filters.rs  mod.rs  player.rs  producer.rs
