[package]
name = "MetalFistBot7000"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["stream"] }
serde_json = "1.0.145"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.31"
tungstenite = "0.21.0"
opus = "0.3.0"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
tracing-subscriber = "0.3"
augmented-dsp-filters = "2.5.0"
audio-processor-traits = "4.3.0"
url = "2.5.7"
socket2 = "0.6.1"

[profile.dev]
incremental = true

[build-dependencies]
chrono = "0.4.42"
